cp project/force-app/main/default/objects/Project__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>