cp project/force-app/main/default/objects/Project__c/fields/Banner_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image_URL__c</fullName>
    <label>Banner Image URL</label>
    <type>Url</type>
</CustomField>