cp project/force-app/main/default/objects/Project__c/fields/Blocked_Units__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Blocked Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>