cp project/force-app/main/default/objects/Project__c/fields/Builder_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Name__c</fullName>
    <label>Builder Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>