cp project/force-app/main/default/objects/Project__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <defaultValue>12.00</defaultValue>
    <description>Annual interest rate for overdue demands configured per project (Slide 18).</description>
    <label>Annual Interest Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>