cp project/force-app/main/default/objects/Project__c/fields/RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>RERA_Number__c</fullName>
    <label>RERA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>