cp project/force-app/main/default/objects/Project__c/fields/Starting_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price__c</fullName>
    <label>Starting Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>