cp project/force-app/main/default/objects/Project__c/validationRules/Launch_Before_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Launch_Before_Completion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Launch_Date__c)), NOT(ISBLANK(Completion_Date__c)), Completion_Date__c &lt; Launch_Date__c)</errorConditionFormula>
    <errorMessage>Completion Date cannot precede Launch Date.</errorMessage>
</ValidationRule>