cp project/force-app/main/default/objects/Project__c/validationRules/Min_Price_Less_Than_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Price_Less_Than_Max</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Minimum_Price__c)), NOT(ISBLANK(Maximum_Price__c)), Minimum_Price__c > Maximum_Price__c)</errorConditionFormula>
    <errorMessage>Minimum Price cannot exceed Maximum Price.</errorMessage>
</ValidationRule>