cp project/force-app/main/default/objects/Project__c/listViews/Active_Projects.listView-meta.xml
<ListView>
    <fullName>Active_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Code__c</columns>
    <columns>Developer__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Projects</label>
</ListView>