cp project/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_Code__c</columns>
    <columns>NAME</columns>
    <columns>Available_Units__c</columns>
    <columns>Total_Units__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Possession_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>